connect to mongo atlas

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 node_modules
+env
+env.sample_
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -83,6 +85,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
